--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -355,14 +355,18 @@ if (modelType is DictionaryTypeGo dictionaryType && dictionaryType.SupportsAddit
         // NextWithContext advances to the next page of values.  If there was an error making
         // the request the page does not advance and the error is returned.
         func (page * @Model.Name) NextWithContext(ctx context.Context) (err error) {
-            ctx = tracing.StartSpan(ctx, "@(modelPageType.AdvancerFqdn)")
-            defer func() {
-                sc := -1
-                if page.Response().Response.Response != nil {
-                    sc = page.Response().Response.Response.StatusCode
-                }
-                tracing.EndSpan(ctx, sc, err)
-            }()
+        // Not necessary to perform this check as nothing will be instrumented if it is false, but
+        // adding it to avoid any potential perf issue.
+        if tracing.IsEnabled() {
+        ctx = tracing.StartSpan(ctx, fmt.Sprintf("%s/@(modelPageType.AdvancerQualifiedName)", fqdn))
+        defer func() {
+        sc := -1
+        if page.Response().Response.Response != nil {
+        sc = page.Response().Response.Response.StatusCode
+        }
+        tracing.EndSpan(ctx, sc, err)
+        }()
+        }
         next, err := page.@(modelPageType.FnFieldName)(ctx, page.@modelPageType.ResultFieldName)
         if err != nil {
         return err
@@ -406,14 +410,18 @@ if (modelType is DictionaryTypeGo dictionaryType && dictionaryType.SupportsAddit
         // NextWithContext advances to the next value.  If there was an error making
         // the request the iterator does not advance and the error is returned.
         func (iter * @Model.Name) NextWithContext(ctx context.Context) (err error) {
-            ctx = tracing.StartSpan(ctx, "@(iterType.AdvancerFqdn)")
-            defer func() {
-                sc := -1
-                if iter.Response().Response.Response != nil {
-                    sc = iter.Response().Response.Response.StatusCode
-                }
-                tracing.EndSpan(ctx, sc, err)
-            }()
+        // Not necessary to perform this check as nothing will be instrumented if it is false, but
+        // adding it to avoid any potential perf issue.
+        if tracing.IsEnabled() {
+        ctx = tracing.StartSpan(ctx, fmt.Sprintf("%s/@(iterType.AdvancerQualifiedName)", fqdn))
+        defer func() {
+        sc := -1
+        if iter.Response().Response.Response != nil {
+        sc = iter.Response().Response.Response.StatusCode
+        }
+        tracing.EndSpan(ctx, sc, err)
+        }()
+        }
         iter.@iterType.IndexField++
         if iter.@iterType.IndexField < len(iter. @(iterType.PageField).Values()) {
         return nil
