Don't send read-only properties over the wire
Upcoming changes to some services will reject API calls that send values
for read-only properties.  Set all read-only properties to nil in the
preparer and omit them from custom marshalling.  Emit a comment
indicating that a field is read-only.

--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -190,6 +190,17 @@ func (client @(Model.Owner)) @(Model.Name)(@Model.MethodParametersSignature()) (
             @EmptyLine
         </text>
     }
+    @if (Model.BodyParameter != null && Model.BodyParameter.ModelType is CompositeTypeGo ctg)
+    {
+        // set all read-only properties to nil so they aren't sent over the wire
+        foreach (var p in ctg.Properties)
+        {
+            if (p.IsReadOnly)
+            {
+                @:@(Model.BodyParameter.Name).@(p.Name) = nil
+            }
+        }
+    }
     preparer := autorest.CreatePreparer(
     @(Model.PrepareDecorators.EmitAsArguments()))
 
