fix codegen for polymorphic types

--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -190,9 +190,10 @@ func (client @(Model.Owner)) @(Model.Name)(@Model.MethodParametersSignature()) (
             @EmptyLine
         </text>
     }
-    @if (Model.BodyParameter != null && Model.BodyParameter.ModelType is CompositeTypeGo ctg)
+    @if (Model.BodyParameter != null && Model.BodyParameter.ModelType is CompositeTypeGo ctg && !ctg.IsPolymorphic)
     {
-        // set all read-only properties to nil so they aren't sent over the wire
+        // set all read-only properties to nil so they aren't sent over the wire.  polymorphic types
+        // are passed as interfaces plus they do this in their custom marshallers so skip them here.
         foreach (var p in ctg.Properties)
         {
             if (p.IsReadOnly)
