--- a/src/Templates/EnumTemplate.cshtml
+++ b/src/Templates/EnumTemplate.cshtml
@@ -62,7 +62,7 @@ type @Model.Name string
     )
     // @possibleFuncName returns an array of possible values for the @Model.Name const type.
     func @(possibleFuncName)() []@Model.Name {
-        return []@(Model.Name){@(string.Join(',', orderedValues))}
+        return []@(Model.Name){@(string.Join(",\n", orderedValues))}
     }
     </text>
 }
