remove delimiter, just assign slice to map

--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -160,16 +160,7 @@ func (client @(Model.Owner)) @(Model.Name)(@Model.MethodParametersSignature()) (
         @:@(Model.QueryMap)
         foreach (var p in Model.OptionalQueryParameters)
         {
-            string emptyCheck;
-            if (p.CollectionFormat == CollectionFormat.Multi)
-            {
-                emptyCheck = $"{p.GetParameterName()} != nil";
-            }
-            else
-            {
-                emptyCheck = p.GetEmptyCheck(p.GetParameterName(), false);
-            }
-            @:if @emptyCheck {
+            @:if @(p.GetEmptyCheck(p.GetParameterName(), false)) {
             @:@(p.AddToMap("queryParameters"))
             if (p.DefaultValue.Value != null)
             {
