--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -152,8 +152,8 @@ func (client @(Model.Owner)) @(Model.Name)(@Model.MethodParametersSignature()) (
     }
     @if (Model.QueryParameters.Any())
     {
-        if (Model.QueryParameters.Any(p => p.GetParameterName().IsApiVersion())
-            && !Model.LocalParameters.Any(p => p.GetParameterName().IsApiVersion()))
+        if (Model.QueryParameters.Any(p => p.IsAPIVersion)
+            && !Model.LocalParameters.Any(p => p.IsAPIVersion))
         {
             @:@(string.Format("const APIVersion = \"{0}\"", Model.APIVersion))
         }
