Include ListComplete method in mock interfaces
Update comment for client constructors.

--- a/src/Templates/InterfacesTemplate.cshtml
+++ b/src/Templates/InterfacesTemplate.cshtml
@@ -71,6 +71,10 @@ import (
         @foreach (var method in c.Value)
         {
             @:@(method.Name)(@method.MethodParametersSignature(true)) (@method.MethodReturnSignature(true))
+            @if (method.NeedsListComplete)
+            {
+                @:@(method.ListCompleteMethodName)(@(method.MethodParametersSignature())) (@method.ListCompleteReturnSig(true))
+            }
         }
         }
         @EmptyLine
