--- a/src/Templates/MethodGroupTemplate.cshtml
+++ b/src/Templates/MethodGroupTemplate.cshtml
@@ -51,7 +51,7 @@ else
 
 @if (!Model.IsCustomBaseUri)
 {
-    @WrapComment("// ", string.Format("New{0}WithBaseURI creates an instance of the {0} client.", Model.ClientName))
+    @WrapComment("// ", string.Format("New{0}WithBaseURI creates an instance of the {0} client using a custom endpoint.  Use this when interacting with an Azure cloud that uses a non-standard base URI (sovereign clouds, Azure stack).", Model.ClientName))
 <text>
     func New@(Model.ClientName)WithBaseURI(baseURI string, @(Model.GlobalParameters)) @(Model.ClientName) {
         return @(Model.ClientName){ NewWithBaseURI(baseURI, @(Model.HelperGlobalParameters))}
