--- a/src/Templates/ServiceClientTemplate.cshtml
+++ b/src/Templates/ServiceClientTemplate.cshtml
@@ -67,7 +67,7 @@ else
 {
 <text>
 @EmptyLine
-@WrapComment("// ", string.Format("NewWithBaseURI creates an instance of the {0} client.", Model.BaseClient))
+@WrapComment("// ", string.Format("NewWithBaseURI creates an instance of the {0} client using a custom endpoint.  Use this when interacting with an Azure cloud that uses a non-standard base URI (sovereign clouds, Azure stack).", Model.BaseClient))
 func NewWithBaseURI(baseURI string, @(Model.GlobalParameters)) @(Model.BaseClient) {
     return @(Model.BaseClient){
         Client: autorest.NewClientWithUserAgent(UserAgent()),
