--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -388,7 +388,7 @@ if (modelType is DictionaryTypeGo dictionaryType && dictionaryType.SupportsAddit
 
         // NotDone returns true if the page enumeration should be started or is not yet complete.
         func (page @Model.Name) NotDone() bool {
-            return page.@(modelPageType.ResultFieldName).@(modelPageType.NextLink) != nil || !page.@(modelPageType.ResultFieldName).IsEmpty()
+            return page.@(modelPageType.ResultFieldName).@(modelPageType.NextLink) != nil && len(*page.@(modelPageType.ResultFieldName).@(modelPageType.NextLink)) != 0
         }
 
         // Response returns the raw server response from the last page request.
@@ -406,7 +406,7 @@ if (modelType is DictionaryTypeGo dictionaryType && dictionaryType.SupportsAddit
 
         // Creates a new instance of the @Model.Name type.
         func New@(Model.Name) (getNextPage @(modelPageType.NextPageFunctionSig)) @Model.Name {
-            return @(Model.Name){@(modelPageType.FnFieldName): getNextPage}
+        return @(Model.Name){@(modelPageType.FnFieldName): getNextPage}
         }
     </text>
 }
@@ -469,7 +469,7 @@ if (modelType is DictionaryTypeGo dictionaryType && dictionaryType.SupportsAddit
 
         // Creates a new instance of the @Model.Name type.
         func New@(Model.Name) (page @(iterType.PageType.Name)) @Model.Name {
-            return @(Model.Name){@(iterType.PageField): page}
+        return @(Model.Name){@(iterType.PageField): page}
         }
     </text>
 }
